# password-manager

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: tests.yml
include/app/: Action.h  Application.h  BootstrapState.h  LockedState.h  ShutdownState.h  State.h  UnlockedState.h
include/crypto/: CryptoConstants.h  CryptoContext.h  CryptoError.h  CryptoTypes.h  VaultCrypto.h
include/ui/: TerminalUI.h
include/util/: Expected.h  SecureString.h
include/vault/: Entry.h  Vault.h  VaultError.h  VaultFile.h  VaultFileError.h  VaultSession.h
src/: main.cpp
src/app/: Application.cpp  BootstrapState.cpp  LockedState.cpp  ShutdownState.cpp  UnlockedState.cpp
src/crypto/: CryptoContext.cpp  VaultCrypto.cpp
src/ui/: TerminalUI.cpp
src/util/: SecureString.cpp
src/vault/: Vault.cpp  VaultFile.cpp  VaultSession.cpp
tests/: CMakeLists.txt
tests/app/: StateTest.cpp
tests/crypto/: CryptoContextTests.cpp  VaultCryptoTests.cpp
tests/vault/: VaultFileTests.cpp  VaultSessionTests.cpp  VaultTestFixture.h  VaultTests.cpp
